655/k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: smg-gateway
  namespace: servicemesh-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: smg-virtualservice
  namespace: servicemesh-gateway
spec:
  hosts:
    - "*"
  gateways:
    - smg-gateway
  http:
    - match:
        - uri:
            prefix: /api/
      route:
        - destination:
            host: smg-backend
            port:
              number: 8080
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: smg-frontend
            port:
              number: 80
