655/k8s/kiali-config.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kiali-virtualservice
  namespace: istio-system
spec:
  hosts:
    - "kiali.local"
  gateways:
    - mesh-gateway
  http:
    - route:
        - destination:
            host: kiali
            port:
              number: 20001
